crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__multiple__range__range_periodic.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Ok(
    (
        "",
        DateRule {
            kinds: [
                DateKind {
                    range: (
                        Date(
                            1,
                        ),
                        Date(
                            3,
                        ),
                    ),
                    periodic: DatePeriodic(
                        1,
                    ),
                },
                DateKind {
                    range: (
                        Date(
                            1,
                        ),
                        Date(
                            3,
                        ),
                    ),
                    periodic: DatePeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
